[gd_scene load_steps=9 format=2]

[ext_resource path="res://sprites/buttons or icons/long ribbon banner.png" type="Texture" id=1]
[ext_resource path="res://sprites/buttons or icons/accept button.png" type="Texture" id=2]
[ext_resource path="res://sprites/buttons or icons/decline button.png" type="Texture" id=3]
[ext_resource path="res://sprites/buttons or icons/share button.png" type="Texture" id=4]
[ext_resource path="res://sprites/buttons or icons/details button.png" type="Texture" id=5]
[ext_resource path="res://sprites/font/PixulBrush.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Game Play/Challenge/ChallengeNotifDetails.gd" type="Script" id=7]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 6 )

[node name="ChallengeNotifDetails" type="Control"]
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RibbonBanner" type="TextureRect" parent="."]
margin_left = 16.0
margin_top = 16.0
margin_right = 776.0
margin_bottom = 152.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AcceptButton" type="TextureButton" parent="."]
margin_left = 808.0
margin_top = -8.0
margin_right = 1040.0
margin_bottom = 136.0
texture_normal = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeclineButton" type="TextureButton" parent="."]
margin_left = 1048.0
margin_top = -8.0
margin_right = 1272.0
margin_bottom = 139.0
texture_normal = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DetailsButton" type="TextureButton" parent="."]
margin_left = 808.0
margin_top = -8.0
margin_right = 1040.0
margin_bottom = 123.0
texture_normal = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShareButton" type="TextureButton" parent="."]
margin_left = 1048.0
margin_top = -8.0
margin_right = 1272.0
margin_bottom = 123.0
texture_normal = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChallengeDetails" type="Label" parent="."]
margin_left = 64.0
margin_top = 56.0
margin_right = 736.0
margin_bottom = 112.0
custom_fonts/font = SubResource( 1 )
text = "#placeholder#"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="AcceptButton" to="." method="_on_AcceptButton_pressed"]
[connection signal="pressed" from="DeclineButton" to="." method="_on_DeclineButton_pressed"]
[connection signal="pressed" from="DetailsButton" to="." method="_on_DetailsButton_pressed"]
[connection signal="pressed" from="ShareButton" to="." method="_on_ShareButton_pressed"]
